# esp-axs15231b-display

./: Cargo.toml  README.md  main.rs
.cargo/: config.toml
include/: lv_conf.h  lv_drv_conf.h
old_lvgl_example/: axs15231b.rs  main cursed.rs
src/: axs15231b.rs  lib.rs
src/hal/: second_core.rs
