[package]
edition = "2024"
name = "esp-axs15231b-display"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp-axs15231b-display"
path = "./src/bin/main.rs"

[dependencies]
# esp-hal = { version = "~1.0", features = [
#   "defmt",
#   "esp32s3",
#   "unstable",
#   "psram",
# ] }
esp-hal = { version = "^1.0.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
  "psram",
], git = "https://github.com/H01001000/esp-hal", branch = "spi-half-duplex-async-v1" }
esp-rtos = { version = "^0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
], git = "https://github.com/H01001000/esp-hal", branch = "spi-half-duplex-async-v1" }
esp-bootloader-esp-idf = { version = "^0.4.0", features = [
  "defmt",
  "esp32s3",
], git = "https://github.com/H01001000/esp-hal", branch = "spi-half-duplex-async-v1" }
esp-alloc = { version = "^0.9.0", features = [
  "defmt",
  "nightly",
], git = "https://github.com/H01001000/esp-hal", branch = "spi-half-duplex-async-v1" }
esp-radio = { version = "^0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  # "smoltcp",
  "unstable",
  "wifi",
], git = "https://github.com/H01001000/esp-hal", branch = "spi-half-duplex-async-v1" }

defmt = "1.0.1"

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
lvgl = { version = "0.6.2", default-features = false, features = [
  "embedded_graphics",
  "unsafe_no_autoinit",
] }
embedded-graphics = "0.7.1"
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
lvgl-sys = "0.6.2"
cstr_core = "0.2.6"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug-assertions = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
